raw/Daniswara Nurwijayanti Shafiyyah 6430 245150207111061/2024-11-14-09-05-16.ceg/compilation.txt
NT.java:12: error: illegal start of type
     package lathckrank;
     ^
NT.java:12: error: <identifier> expected
     package lathckrank;
                       ^
NT.java:13: error: illegal start of type
import java.util.Scanner;
^
NT.java:13: error: <identifier> expected
import java.util.Scanner;
                        ^
NT.java:72: error: reached end of file while parsing
}
 ^
5 errors
Not compiled
